# rmsh

./: .gitignore  .gitmodules  Cargo.toml  DIMENSIONAL_STRUCTURE.md  GMSH_OPTIONS_REFERENCE.md  NAMING_CONVENTIONS.md  PROJECT_ANALYSIS.md  readme.md
crates/algo/: Cargo.toml
crates/algo/src/: bamg_2d.rs  delaunay_3d.rs  frontal_3d.rs  frontal_delaunay_2d.rs  hxt_3d.rs  laplacian_smooth.rs  lib.rs  mesh_adapt_2d.rs  mesh_optimize.rs  mmg_remesh.rs  msh.rs  planar_meshing.rs  quad_paving_2d.rs  tetrahedralize3d.rs  traits.rs  triangulate2d.rs
crates/cad/: Cargo.toml
crates/cad/src/: boolean.rs  geom.rs  lib.rs  primitive.rs  shape.rs  tessellate.rs  transform.rs
crates/geo/src/: classify.rs  extract.rs  lib.rs  triangulate.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs  msh.rs  step.rs
crates/model/src/: element.rs  lib.rs  mesh.rs  topology.rs
crates/py/: .gitignore  Cargo.toml  pyproject.toml
crates/py/examples/: cad_example.py  examples.py  meshing_algorithms.py
crates/py/python/: example.py  rmsh.py
crates/py/python/rmsh/: __init__.py
crates/py/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/shaders/: gizmo.wgsl  highlight.wgsl  mesh.wgsl  wireframe.wgsl
crates/renderer/src/: camera.rs  gizmo.rs  gizmo.wgsl  lib.rs  mesh_render.rs  pipeline.rs  scene.rs
crates/rmsh-algo/src/: lib.rs  msh.rs
crates/rmsh-geo/: Cargo.toml
crates/rmsh-model/: Cargo.toml
crates/rmsh-model/src/: node.rs
crates/rmsh-py/: Cargo.toml  build.rs
crates/rmsh-py/api/: rmshc.h
crates/rmsh-py/src/: lib.rs
crates/rmsh-renderer/: Cargo.toml
crates/rmsh-renderer/shaders/: mesh.wgsl  point.wgsl
crates/rmsh-renderer/src/: camera.rs  gizmo.rs  mesh_render.rs  scene.rs  uniform.rs
crates/rmsh-viewer/: Cargo.toml
crates/rmsh-viewer/src/: app.rs  viewport.rs
crates/viewer/: Cargo.toml  index.html
crates/viewer/src/: app.rs  io.rs  lib.rs  main.rs  viewport.rs
testdata/: my_cube.step  simple_tetra.step
