[workspace]
members = [
    "crates/model",
    "crates/geo",
    "crates/io",
    "crates/algo",
    "crates/renderer",
    "crates/viewer",
    "crates/py",
    "vendor/rcad/libs/rcad-kernel",
    "vendor/rcad/libs/rcad-modeling",
    "vendor/rcad/libs/rcad-algorithms",
    "vendor/rcad/libs/rcad-step",
    "vendor/rcad/libs/rcad-render",
    "vendor/rcad/libs/rcad-scene",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
rmsh-model = { path = "crates/model" }
rmsh-geo = { path = "crates/geo" }
rmsh-io = { path = "crates/io" }
rmsh-algo = { path = "crates/algo" }
rmsh-renderer = { path = "crates/renderer" }
rcad-kernel = { path = "vendor/rcad/libs/rcad-kernel" }
rcad-modeling = { path = "vendor/rcad/libs/rcad-modeling" }
rcad-algorithms = { path = "vendor/rcad/libs/rcad-algorithms" }
rcad-step = { path = "vendor/rcad/libs/rcad-step" }
rcad-render = { path = "vendor/rcad/libs/rcad-render" }
rcad-scene = { path = "vendor/rcad/libs/rcad-scene" }

# Math
nalgebra = { version = "0.33", features = ["serde-serialize"] }
glam = { version = "0.29", features = ["serde"] }

# Graphics
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }

# UI
egui = "0.33"
eframe = { version = "0.33", default-features = false }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }

# File dialog
rfd = "0.15"
pollster = "0.4"

# Web
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
