[package]
name = "rmsh-py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_rmsh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39", "generate-import-lib"] }
rmsh-model.workspace = true
rmsh-io.workspace = true
rmsh-algo.workspace = true
rmsh-viewer = { path = "../viewer" }
