[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rmsh"
version = "0.1.0"
description = "Python bindings for the rmsh mesh toolkit"
requires-python = ">=3.9"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "rmsh._rmsh"
features = ["pyo3/extension-module"]
