[package]
name = "rmsh-viewer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rmsh"
path = "src/main.rs"

[dependencies]
rmsh-model = { workspace = true }
rmsh-geo = {  workspace = true }
rmsh-io = { workspace = true }
rmsh-algo = { workspace = true }
rmsh-renderer = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true, features = ["wgpu"] }
wgpu = { workspace = true }
bytemuck = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
pollster = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCanvasElement", "Window", "Document", "Element"] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
